--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.14.3",
+    "less": "^4.1.3",
     "quasar": "^2.7.5",
-    "vue": "^3.2.37"
+    "vue": "^3.2.37",
+    "vue-router": "4",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@quasar/vite-plugin": "^1.0.10",
-    "@vitejs/plugin-vue": "^3.0.0",
+    "@vitejs/plugin-vue": "^3.0.1",
     "sass": "1.32.12",
     "vite": "^3.0.0"
   }
