--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.14.3",
+    "axios": "^0.27.2",
     "less": "^4.1.3",
     "quasar": "^2.7.5",
     "vue": "^3.2.37",
